plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev.legacyforge' version '2.0.143'
}

version = project.mod_version
group = project.group

base {
    archivesName = project.name
}

tasks.named('jar') {
    archiveFileName = "${project.name}-${project.version}-1.20.1forge-neoforge.jar"
    manifest {
        attributes 'MixinConfigs': 'invasion.mixin.json'
    }
}

tasks.matching { it.name == 'reobfJar' }.configureEach {
    archiveFileName = "${project.name}-${project.version}-1.20.1forge-neoforge.jar"
}

java {
    withSourcesJar()
    toolchain.languageVersion = JavaLanguageVersion.of(17)
}

sourceSets {
    main {
        java {
            // Minecraft 26.2 render-state implementations. The 1.20.1 port uses
            // the retained immediate-mode renderers under client/render/entity
            // and their registry under client/render/legacy.
            exclude 'com/invasion/client/render/*.java'
            exclude 'com/invasion/mixin/AgeableMobRendererAccessor.java'
        }
    }
    test {
        compileClasspath += main.compileClasspath
        runtimeClasspath += main.runtimeClasspath
    }
}

repositories {
    maven { name = 'JEI'; url = 'https://maven.blamejared.com' }
    maven { name = 'Modrinth'; url = 'https://api.modrinth.com/maven' }
}

legacyForge {
    enable {
        neoForgeVersion = "${project.minecraft_version}-${project.neo_version}"
    }

    runs {
        client {
            client()
        }
        server {
            server()
            programArgument '--nogui'
        }
        configureEach {
            logLevel = org.slf4j.event.Level.INFO
        }
    }

    mods {
        invmod {
            sourceSet sourceSets.main
        }
    }

}

dependencies {
    compileOnly "mezz.jei:jei-${project.minecraft_version}-forge-api:${project.jei_version}"
    compileOnly "maven.modrinth:mutant-monsters:v8.0.8-1.20.1-Forge"
    compileOnly "maven.modrinth:puzzles-lib:v8.1.33-1.20.1-Forge"
    compileOnly "maven.modrinth:BOCJKD49:forge-mc1.20.1-3.0.9"
    testImplementation platform('org.junit:junit-bom:6.0.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.mockito:mockito-core:5.21.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

processResources {
    inputs.properties(
            version: project.version,
            minecraftVersion: project.minecraft_version,
            neoVersion: project.neo_version)

    filesMatching('META-INF/mods.toml') {
        expand(
                version: project.version,
                minecraftVersion: project.minecraft_version,
                neoVersion: project.neo_version)
    }

    from 'LICENSE'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 17
    options.compilerArgs += ['-Xmaxerrs', '5000']
}
